<resources>
    <string name="app_name" translatable="false">EveryPrice</string>
    <string name="google_maps_key" translatable="false">AIzaSyDejAVLrf_3ARNQ_pYv0pyY4N00UC220_E</string>

    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="title_activity_security">Security</string>
    <string name="tab_text_1">Sign In</string>
    <string name="tab_text_2">Registration</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_retype">Retype password</string>
    <string name="password_not_match">Passwords not match!</string>
    <string name="address">Address</string>
    <string name="shop_name">Shop name</string>

    <string name="shop">Shop</string>
    <string name="add_shop">Add shop</string>
    <string name="specify_location_button">Specify location on map...</string>

    <string name="add_shop_title">Create new shop</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="save">Save</string>

    <string name="specify_location">Apply location</string>

    <string name="error_wrong_username_or_password">Wrong Username or Password!</string>
    <string name="error_location_service_not_ready">Location service unavailable!</string>
    <string name="error_location_not_ready">Location not ready! Please wait a minute...</string>

    <string name="webapi_error_wrong_username_or_password">Wrong username or password!</string>

    <string name="add_price_title">Add new price of a product</string>

    <string name="add_product_title">Add new product</string>
    <string name="product_name_hint">Product name</string>
    <string name="product_price_hint">Price</string>
    <string name="product_unit_piece">Pc.</string>
    <string name="product_unit_kg">Kg.</string>
    <string name="price_is_dicount">Discount</string>

    <string name="kilometer_short">km</string>
    <string name="meter_short">m</string>
    <string name="miles">ml</string>
    <string name="tags">Tags</string>
    <string name="tags_search_hint">Find tags...</string>

    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>

    <string name="no_price">No price</string>

    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <string name="take_a_photo">Take a photo...</string>

    <string name="exit">Exit</string>
</resources>

