<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mainmenu_action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        >
    </item>
    <item
        android:id="@+id/action_Menu"
        android:orderInCategory="100"
        android:title="@string/menu"
        app:showAsAction="never" >
        <item
            android:id="@+id/mainMenu_Profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/mainMenu_Setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/mainMenu_Logout"
            android:title="@string/logout" />
    </item>
</menu>